--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,22 +4,22 @@ server.port = 8080
 # DATABASE
 # ===============================
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/doorsBD
-spring.datasource.username=postgres
-spring.datasource.password=bKB$2hzs
-spring.datasource.initialization-mode=always
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost/doorsBD
+#spring.datasource.username=postgres
+#spring.datasource.password=bKB$2hzs
+#spring.datasource.initialization-mode=always
 
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
 
 
 #================================
@@ -31,7 +31,7 @@ log4j.rootLogger = INFO, CONSOLE, SYSLOG, FILE
 
 log4j.logger.org.springframework=ALL
 #log4j.logger.org.springframework.data.postgres = ERROR
-#log4j.logger.путь.к.вашему.каталогу = DEBUG
+#log4j.logger.пїЅпїЅпїЅпїЅ.пїЅ.пїЅпїЅпїЅпїЅпїЅпїЅ.пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ = DEBUG
 
 #Direct log messages to stdout
 
